# checkin-agentrouter

./: .env.example  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  checkin.py  pyproject.toml
docs/superpowers/plans/: 2026-07-10-account-progress-implementation.md  2026-07-11-browser-user-info-reliability.md  2026-07-11-cloakbrowser-oauth-speed.md  2026-07-11-profile-expiration-state.md  2026-07-11-separate-balance-and-checkin-retries.md
docs/superpowers/specs/: 2026-07-10-account-progress-design.md  2026-07-11-browser-user-info-reliability-design.md  2026-07-11-cloakbrowser-oauth-speed-design.md  2026-07-11-profile-expiration-state-design.md
launchd/: README.md  com.checkin.agentrouter.plist
tests/: test_account_progress.py  test_browser_settings.py  test_checkin_notification.py  test_checkin_retry.py  test_github_browser_login.py  test_main_parallel.py  test_notify.py  test_profile_commands.py  test_provider_config.py  test_session_state.py
utils/: __init__.py  browser.py  config.py  notify.py  profiles.py
